# PyNance

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
example/: strategies.ipynb
examples/: ml_strategies.ipynb  ti_strategies.ipynb
pynance/: __init__.py  base.py
pynance.egg-info/: PKG-INFO  SOURCES.txt
pynance/ml/: __init__.py  linear_regression.py  ml_base.py  walk_forward_build.ipynb
pynance/ta/: __init__.py  mean_reversion.py  ml_base_build.ipynb  sma.py
