[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pynance"
version = "0.1.0"
description = "A Python framework for backtesting technical and ML-based trading strategies."
authors = [
  { name="Tom Macgillivray", email="tom.macgillivray@outlook.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "numpy>=1.23",
  "pandas",
  "matplotlib",
  "scikit-learn",
  "yfinance>=0.2.55"
]

[project.urls]
"Homepage" = "https://github.com/esemsc-tm1724/PyNance.git"
"Documentation" = "N/A"
